# breeder

./: CMakeLists.txt  README  README.md  breeder  svn-commit.2.tmp  svn-commit.2.tmp.save  svn-commit.tmp  temp.txt
Documentation/: Breeder-Tutorial.1_0.docx  Breeder-Tutorial.1_1.docx
branches/occluded-volume/: CMakeLists.txt
branches/occluded-volume/include/: .Breed.h.swn  .Chromosome.h.swo  Breed.h  Chromosome.h  Command.h.bak  DBManager.h  MysqlConnection.h
include/: .Breed.h.swo  .DBManager.h.swp  Breed.h  BreederParameterReader.h  BreederUtils.h  Chromosome.h  DBManager.h  MysqlConnection.h  SQLite.h
perl/: job.breeder  mysql-foldx.pl  populate-correspondence.pl  populateMatchingChains.pl  populateMatchingMutationStrings.pl  predict-affinity.pl  run-foldx-computeIndividualWildtype.pl~  run-foldx.2.pl  run-foldx.298K.pl  run-foldx.3.pl  run-foldx.SKEMPIMN.pl  run-foldx.noOpt.pl  run-foldx.pl  run-foldx.pl.bak  run-foldx.pl.edited  run-foldx.pl~  temp.pl
scripts/: multiScanning.mysql.pl  multiScanning.sqlite3.pl
singleMutantFiles/: batch.txt  option-file.mysql  runfile.txt
src/: .Breed.cpp.swo  .Breed.cpp.swp  Breed.cpp  BreederParameterReader.cpp  BreederParameterReader.cpp.bak  Chromosome.cpp  Chromosome.cpp.bak  Command.cpp.bak  DBManager.cpp  MysqlConnection.cpp  SQLite.cpp  main.cpp  main.cpp.bak  main.cpp.pointer
